cast_cat追加
